--- a/static/assets/less/custom.less
+++ b/static/assets/less/custom.less
@@ -177,6 +177,9 @@ div#main {
 
 div#logo {
 	padding: 20px 0;
+	img {
+		max-width: 100%;
+	}
 }
 
 .navbar {
